--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,10 +11,10 @@ jobs:
     name: Build Android & Release
     runs-on: macos-latest
     env: 
-      KEY_JKS: ${{ secrets.KEY_JKS }}
-      KEY_PATH: "key.jks"
-      KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
-      ALIAS_PASSWORD: ${{ secrets.ALIAS_PASSWORD }}
+      KEY_JKS: "mykey"
+      KEY_PATH: "android/app/keystore.jks"
+      KEY_PASSWORD: "123456"
+      ALIAS_PASSWORD: "123456"
     steps:
       - uses: actions/checkout@v1
       - uses: actions/setup-java@v1
