--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -70,7 +70,7 @@ android {
             signingConfig signingConfigs.release
         }
     }
-    signingConfigs {
+   /* signingConfigs {
         debug {
             storeFile file('android/app/keystore.jks')
             storePassword '123456'
@@ -83,7 +83,7 @@ android {
             keyPassword '123456'
             keyAlias = 'mykey'
         }
-    }
+    }*/
 
     lintOptions {
         disable 'InvalidPackage'
