--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -59,7 +59,7 @@ android {
         }
     }
 
-    buildTypes {
+   /*  buildTypes {
         release {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
@@ -70,7 +70,7 @@ android {
             signingConfig signingConfigs.release
         }
     }
-   /* signingConfigs {
+   signingConfigs {
         debug {
             storeFile file('android/app/keystore.jks')
             storePassword '123456'
