--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,7 @@ jobs:
       KEY_PATH: "android/app/keystore.jks"
       KEY_PASSWORD: "123456"
       ALIAS_PASSWORD: "123456"
+      GITHUB_TOKEN: ${{ secrets.DEMOTOKEN }}
     steps:
       - uses: actions/checkout@v1
       - uses: actions/setup-java@v1
